--- a/Classes/en.lproj/ChatRoomViewController.xib
+++ b/Classes/en.lproj/ChatRoomViewController.xib
@@ -54,7 +54,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{-13, -5}, {131, 107}}</string>
 										<reference key="NSSuperview" ref="414508017"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="495119736"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -69,7 +68,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{20, 6}, {65, 65}}</string>
 										<reference key="NSSuperview" ref="414508017"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="578164845"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -89,7 +87,6 @@
 										<int key="NSvFlags">290</int>
 										<string key="NSFrame">{{101, 37}, {199, 43}}</string>
 										<reference key="NSSuperview" ref="414508017"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="879615756"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -122,7 +119,6 @@
 								</array>
 								<string key="NSFrameSize">{320, 80}</string>
 								<reference key="NSSuperview" ref="715329044"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="934483770"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="460939904">
@@ -137,7 +133,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, 80}, {320, 279}}</string>
 								<reference key="NSSuperview" ref="715329044"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="229066993"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="795265735">
@@ -163,7 +158,6 @@
 										<int key="NSvFlags">274</int>
 										<string key="NSFrameSize">{320, 57}</string>
 										<reference key="NSSuperview" ref="229066993"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="164391443"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<reference key="IBUIBackgroundColor" ref="460939904"/>
@@ -179,7 +173,6 @@
 										<int key="NSvFlags">297</int>
 										<string key="NSFrame">{{262, 0}, {58, 57}}</string>
 										<reference key="NSSuperview" ref="229066993"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="833509359"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -222,7 +215,6 @@
 										<int key="NSvFlags">298</int>
 										<string key="NSFrame">{{20, 24}, {222, 9}}</string>
 										<reference key="NSSuperview" ref="229066993"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="391057061"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -236,7 +228,6 @@
 								</array>
 								<string key="NSFrame">{{0, 359}, {320, 57}}</string>
 								<reference key="NSSuperview" ref="715329044"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="661332796"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="460939904"/>
@@ -251,7 +242,6 @@
 										<int key="NSvFlags">274</int>
 										<string key="NSFrameSize">{320, 57}</string>
 										<reference key="NSSuperview" ref="833509359"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="120263452"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<reference key="IBUIBackgroundColor" ref="460939904"/>
@@ -267,8 +257,6 @@
 										<int key="NSvFlags">297</int>
 										<string key="NSFrame">{{262, 0}, {58, 57}}</string>
 										<reference key="NSSuperview" ref="833509359"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -325,7 +313,6 @@
 										<int key="NSvFlags">300</int>
 										<string key="NSFrameSize">{35, 57}</string>
 										<reference key="NSSuperview" ref="833509359"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="587350058"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -363,7 +350,6 @@
 										<int key="NSvFlags">274</int>
 										<string key="NSFrame">{{39, 12}, {218, 33}}</string>
 										<reference key="NSSuperview" ref="833509359"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="487645621"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<reference key="IBUIBackgroundColor" ref="460939904"/>
@@ -372,7 +358,6 @@
 								</array>
 								<string key="NSFrame">{{0, 359}, {320, 57}}</string>
 								<reference key="NSSuperview" ref="715329044"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="131075038"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="460939904"/>
@@ -381,7 +366,6 @@
 						</array>
 						<string key="NSFrame">{{0, 44}, {320, 416}}</string>
 						<reference key="NSSuperview" ref="589117993"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="414508017"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="460939904"/>
@@ -396,8 +380,6 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrameSize">{320, 44}</string>
 								<reference key="NSSuperview" ref="333187864"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">2</int>
@@ -419,8 +401,6 @@
 										<int key="NSvFlags">301</int>
 										<string key="NSFrame">{{142, 168}, {37, 37}}</string>
 										<reference key="NSSuperview" ref="369975984"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -432,7 +412,6 @@
 								</array>
 								<string key="NSFrame">{{0, 43}, {320, 417}}</string>
 								<reference key="NSSuperview" ref="333187864"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="764397421"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -446,7 +425,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{6, 0}, {73, 44}}</string>
 								<reference key="NSSuperview" ref="333187864"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -467,7 +445,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{247, 0}, {73, 44}}</string>
 								<reference key="NSSuperview" ref="333187864"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -486,7 +463,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="589117993"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="393955689"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -498,7 +474,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="333187864"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="460939904"/>
@@ -949,170 +924,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">101</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">ChatRoomTableViewController</string>
-					<string key="superclassName">UITableViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ChatRoomTableViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ChatRoomViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="onBackClick:">id</string>
-						<string key="onEditClick:">id</string>
-						<string key="onListTap:">id</string>
-						<string key="onMessageChange:">id</string>
-						<string key="onPictureClick:">id</string>
-						<string key="onSendClick:">id</string>
-						<string key="onTransferCancelClick:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="onBackClick:">
-							<string key="name">onBackClick:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onEditClick:">
-							<string key="name">onEditClick:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onListTap:">
-							<string key="name">onListTap:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onMessageChange:">
-							<string key="name">onMessageChange:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onPictureClick:">
-							<string key="name">onPictureClick:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onSendClick:">
-							<string key="name">onSendClick:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onTransferCancelClick:">
-							<string key="name">onTransferCancelClick:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="addressLabel">UILabel</string>
-						<string key="avatarImage">UIImageView</string>
-						<string key="cancelTransferButton">UIButton</string>
-						<string key="chatView">UIView</string>
-						<string key="editButton">UIToggleButton</string>
-						<string key="headerView">UIView</string>
-						<string key="imageTransferProgressBar">UIProgressView</string>
-						<string key="listTapGestureRecognizer">UITapGestureRecognizer</string>
-						<string key="messageBackgroundImage">UIImageView</string>
-						<string key="messageField">HPGrowingTextView</string>
-						<string key="messageView">UIView</string>
-						<string key="pictureButton">UIButton</string>
-						<string key="sendButton">UIButton</string>
-						<string key="tableController">ChatRoomTableViewController</string>
-						<string key="transferBackgroundImage">UIImageView</string>
-						<string key="transferView">UIView</string>
-						<string key="waitView">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="addressLabel">
-							<string key="name">addressLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="avatarImage">
-							<string key="name">avatarImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelTransferButton">
-							<string key="name">cancelTransferButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="chatView">
-							<string key="name">chatView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="editButton">
-							<string key="name">editButton</string>
-							<string key="candidateClassName">UIToggleButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="headerView">
-							<string key="name">headerView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="imageTransferProgressBar">
-							<string key="name">imageTransferProgressBar</string>
-							<string key="candidateClassName">UIProgressView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="listTapGestureRecognizer">
-							<string key="name">listTapGestureRecognizer</string>
-							<string key="candidateClassName">UITapGestureRecognizer</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="messageBackgroundImage">
-							<string key="name">messageBackgroundImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="messageField">
-							<string key="name">messageField</string>
-							<string key="candidateClassName">HPGrowingTextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="messageView">
-							<string key="name">messageView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="pictureButton">
-							<string key="name">pictureButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="sendButton">
-							<string key="name">sendButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tableController">
-							<string key="name">tableController</string>
-							<string key="candidateClassName">ChatRoomTableViewController</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="transferBackgroundImage">
-							<string key="name">transferBackgroundImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="transferView">
-							<string key="name">transferView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="waitView">
-							<string key="name">waitView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ChatRoomViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HPGrowingTextView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HPGrowingTextView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UIToggleButton</string>
-					<string key="superclassName">UIButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UIToggleButton.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
