--- a/Classes/AboutViewController.xib
+++ b/Classes/AboutViewController.xib
@@ -58,13 +58,13 @@
 				<double key="IBUIScrollIndicatorInsets.right">0.0</double>
 			</object>
 			<object class="IBUIView" id="775128611">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBUIImageView" id="97290309">
 						<reference key="NSNextResponder" ref="775128611"/>
-						<int key="NSvFlags">311</int>
+						<int key="NSvFlags">-2147483337</int>
 						<string key="NSFrame">{{124, 20}, {72, 72}}</string>
 						<reference key="NSSuperview" ref="775128611"/>
 						<reference key="NSNextKeyView" ref="945733244"/>
@@ -89,7 +89,7 @@
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Linphone</string>
+						<string key="IBUIText">Vphone</string>
 						<object class="NSColor" key="IBUITextColor" id="549716735">
 							<int key="NSColorSpace">2</int>
 							<bytes key="NSRGB">MC4zNTY4NjI3NTM2IDAuMzk2MDc4NDM3NiAwLjQzNTI5NDEyMTUAA</bytes>
@@ -117,7 +117,7 @@
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">http://www.Vphone.org</string>
+						<string key="IBUIText">http://www.vkx.com.vn</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">2</int>
 							<bytes key="NSRGB">MC44MTE3NjQ3MTcxIDAuMjk4MDM5MjI3NyAwLjE2MDc4NDMxOQA</bytes>
@@ -141,48 +141,27 @@
 						<int key="NSvFlags">314</int>
 						<string key="NSFrame">{{10, 150}, {300, 21}}</string>
 						<reference key="NSSuperview" ref="775128611"/>
-						<reference key="NSNextKeyView" ref="132342957"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Linphone iPhone 1.0</string>
+						<string key="IBUIText">VoIp application 0.1</string>
 						<reference key="IBUITextColor" ref="549716735"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="741880680">
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
 							<double key="pointSize">13</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="141611231">
+						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">13</double>
 							<int key="NSfFlags">16</int>
 						</object>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-					</object>
-					<object class="IBUILabel" id="132342957">
-						<reference key="NSNextResponder" ref="775128611"/>
-						<int key="NSvFlags">314</int>
-						<string key="NSFrame">{{10, 172}, {300, 21}}</string>
-						<reference key="NSSuperview" ref="775128611"/>
-						<reference key="NSNextKeyView" ref="55823705"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<int key="IBUIContentMode">7</int>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Linphone Core 1.0</string>
-						<reference key="IBUITextColor" ref="549716735"/>
-						<nil key="IBUIHighlightedColor"/>
-						<int key="IBUIBaselineAdjustment">0</int>
-						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="741880680"/>
-						<reference key="IBUIFont" ref="141611231"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="28600489">
@@ -196,7 +175,7 @@
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">© 2010-2012 Belledonne Communications </string>
+						<string key="IBUIText">© VKX ltd</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -242,6 +221,7 @@
 					</object>
 				</object>
 				<string key="NSFrameSize">{320, 600}</string>
+				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="97290309"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -277,14 +257,6 @@
 						<reference key="destination" ref="775128611"/>
 					</object>
 					<int key="connectionID">64</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">linphoneCoreVersionLabel</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="132342957"/>
-					</object>
-					<int key="connectionID">67</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -356,7 +328,6 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="97290309"/>
 							<reference ref="945733244"/>
-							<reference ref="132342957"/>
 							<reference ref="55823705"/>
 							<reference ref="966549235"/>
 							<reference ref="697092436"/>
@@ -402,12 +373,6 @@
 						<string key="objectName">linphoneIphoneVersionLabel</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">66</int>
-						<reference key="object" ref="132342957"/>
-						<reference key="parent" ref="775128611"/>
-						<string key="objectName">linphoneCoreVersionLabel</string>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">69</int>
 						<reference key="object" ref="364833627"/>
 						<reference key="parent" ref="775128611"/>
@@ -431,7 +396,6 @@
 					<string>61.IBPluginDependency</string>
 					<string>62.IBPluginDependency</string>
 					<string>65.IBPluginDependency</string>
-					<string>66.IBPluginDependency</string>
 					<string>69.IBPluginDependency</string>
 				</object>
 				<object class="NSArray" key="dict.values">
@@ -439,7 +403,6 @@
 					<string>AboutViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UIResponder</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
